# arxiv-manager

./: .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt  run.py
config/: domains.yaml
hf_space/: index.html  style.css
src/arxiv_manager/: __init__.py  cli.py  config.py  db.py  models.py  storage.py
src/arxiv_manager/authoring/: __init__.py  _draft_config.py  _draft_prompts.py  _draft_telemetry.py  _rule_groups.py  _validation_helpers.py  ai_draft.py  image_analyzer.py  validator.py
src/arxiv_manager/sourcing/: __init__.py  arxiv.py  downloader.py  extractor.py  filters.py
src/arxiv_manager/tracking/: __init__.py
src/arxiv_manager/web/: app.py  routes.py
src/arxiv_manager/web/templates/: _arxiv_figures.html  _arxiv_search_results.html  _author_analysis.html  _author_draft.html  _validation.html  author.html  base.html  base_layout.html  images.html  metrics.html  stats.html  task_form.html  tasks.html
tests/: conftest.py  test_ai_draft.py  test_arxiv.py  test_config.py  test_db.py  test_filters.py  test_filters_extended.py  test_image_analyzer.py  test_models.py  test_parser.py  test_routes.py  test_validator.py
