[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arxiv-manager"
version = "0.1.0"
description = "AI-powered assistant for arXiv figure analysis and Q&A task authoring"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9",
    "rich>=13.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "jinja2>=3.1",
    "sqlmodel>=0.0.14",
    "pymupdf>=1.23",
    "httpx>=0.24",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "imagehash>=4.2",
]

[project.scripts]
arxiv-manager = "arxiv_manager.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_manager"]
